# hs-whistlepig

./: .gitignore  CONTRIBUTING.md  HACKING.md  LICENSE.txt  README.md  index.html  makefile  params.json  whistlepig.cabal
bench/: Bench1.hs
examples/: ex1.hs
src/Text/Search/: Whistlepig.hs
src/Text/Search/Whistlepig/: Direct.hs  Entry.hs  FFI.hs  FFI.hsc  IO.hs  Index.hs  Query.hs  Util.hs
src/cbits/whistlepig/: query-parser.lex.c  query-parser.lex.h  query-parser.tab.c  query-parser.tab.h  tokenizer.lex.c  tokenizer.lex.h
tests/: Properties.hs
