name:                whistlepig
version:             0.0
synopsis:            Haskell bindings to Whistlepig
description:         
  Whistlepig is minimalistic, full-text realtime search engine written in C.
  .
  These are the complete Haskell bindings.
  .
  Please see the homepage for more information: <https://github.com/wmorgan/whistlepig>
homepage:            http://thoughtpolice.github.com/hs-whistlepig
bug-reports:         http://github.com/thoughtpolice/hs-whistlepig/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Search, Text, Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4,
                     GHC == 7.2.1, GHC == 7.2.2,
                     GHC == 7.4.1

extra-source-files:
  AUTHORS.txt
  README.md
  examples/*.hs
  tests/*.hs
  bench/*.hs

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-whistlepig.git

library
  exposed-modules:
    Text.Search.Whistlepig
    Text.Search.Whistlepig.IO
    Text.Search.Whistlepig.FFI
  build-depends:
    base         >= 4,
    bytestring   >= 0.9

  cc-options: -std=c99 -D_ANSI_SOURCE -D_XOPEN_SOURCE=600

  hs-source-dirs: src
  include-dirs:
    src/cbits/whistlepig

  -- why does cabal not allow globbing in c-sources?
  c-sources:
    src/cbits/whistlepig/entry.c
    src/cbits/whistlepig/error.c
    src/cbits/whistlepig/index.c
    src/cbits/whistlepig/lock.c
    src/cbits/whistlepig/mmap-obj.c
    src/cbits/whistlepig/query.c
    src/cbits/whistlepig/query-parser.c
    src/cbits/whistlepig/query-parser.lex.c
    src/cbits/whistlepig/query-parser.tab.c
    src/cbits/whistlepig/search.c
    src/cbits/whistlepig/segment.c
    src/cbits/whistlepig/snippeter.c
    src/cbits/whistlepig/stringmap.c
    src/cbits/whistlepig/stringpool.c
    src/cbits/whistlepig/termhash.c
    src/cbits/whistlepig/tokenizer.lex.c

  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs
  default-extensions: CPP
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring,
    HUnit,
    QuickCheck,
    hspec,
    whistlepig

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010

benchmark bench1
  hs-source-dirs: bench
  main-is:        Bench1.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring,
    criterion,
    whistlepig

  ghc-options:      -Wall -fno-warn-orphans
  default-language: Haskell2010
